Fix authorized devices alignment

--- a/styles/inspect.css
+++ b/styles/inspect.css
@@ -62,7 +62,7 @@
 
 #removetopbar {
     font-size: 18px;
-    padding: 0 15px;
+    padding: 1px 15px 0px 15px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -344,9 +344,9 @@ input {
 
 #removeback {
     display: inline-block;
-    width: 27px;
+    width: 28px;
     height: 0;
-    padding: 27px 0 0 0;
+    padding: 26px 0 5px 0;
     background: no-repeat -webkit-image-set(url("../img/reflow_in_panel_icon.png") 1x, url("../img/reflow_in_panel_icon@2x.png") 2x);
     vertical-align: middle;
 }
